--- a/gestion de consulta/Views/Login/Login.cshtml
+++ b/gestion de consulta/Views/Login/Login.cshtml
@@ -15,7 +15,7 @@
                     <div class="forgot-grid">
                         <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Recordar Contraseña</label>
                         <div class="forgot">
-                            <a>@Html.ActionLink("olvidaste contraseña?","Recuperarcontraseña")</a>
+                            <a>@Html.ActionLink("olvidaste contraseña?","Recuperar","Paciente")</a>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
@@ -23,7 +23,7 @@
                     <div class="registration">
                         No estas registrado ? Crea una cuenta
                         <a class="">
-                             @Html.ActionLink("aqui","Registrarse")
+                             @Html.ActionLink("aqui","Registro","Paciente")
                         </a>
                     </div>
                 </form>
