--- a/gestion de consulta/Views/Paciente/Recuperar.cshtml
+++ b/gestion de consulta/Views/Paciente/Recuperar.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Recuperarcontraseña";
+    ViewBag.Title = "Recuperar";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
@@ -23,4 +23,3 @@
     </div>
 
 </div>
-
