--- a/gestion de consulta/Views/Shared/_LayoutLogin.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutLogin.cshtml
@@ -8,10 +8,14 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/font-awesome.css" rel="stylesheet" />
     <link href="~/css/custom.css" rel="stylesheet" />
+    
 </head>
 <body>
     <div>
         @RenderBody()
     </div>
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="~/Scripts/paciente.js"></script>
 </body>
 </html>
