--- a/gestion de consulta/Views/Paciente/Registro.cshtml
+++ b/gestion de consulta/Views/Paciente/Registro.cshtml
@@ -23,7 +23,7 @@
                 <div class="clearfix"> </div>
             </div>
             <div class="sign-u">
-                <input type="text" id="Correo" placeholder="Correo Electronico" >
+                <input type="email" id="Correo" placeholder="Correo Electronico" >
                 <div class="clearfix"> </div>
             </div>
 
@@ -41,7 +41,7 @@
             </div>
             <div class="clearfix"> </div>
             <div class="text-center">
-                <input type="button" id="bregistro" class="btn btn-primary" onclick="return Add()" value="Enviar">
+                <input type="button" id="bregistro" class="btn btn-warning btn-lg" onclick="return Add()" value="Registrar">
                 <div class="clearfix"> </div>
             </div>
             <div class="registration">
