--- a/gestion de consulta/Views/Shared/_LayoutAdministrador.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutAdministrador.cshtml
@@ -15,7 +15,7 @@
 <body id="page-top">
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
 
-        <a class="navbar-brand mr-1" href="index.html">BIENVENIDO : @Session["Nusuario"]</a>
+        <a class="navbar-brand mr-1" href="index.html">BIENVENIDO : @Session["Nom_usuario"]</a>
 
         <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
             <i class="fa fa-bars"></i>
@@ -167,7 +167,7 @@
                 <div class="modal-body">Si oprimes salir finalizaras tu sesion </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <a class="btn btn-primary" href="/Login/CerrarSesion">Salir</a>
+                    <a class="btn btn-primary" href="/Login/Cerrar_sesion">Salir</a>
                 </div>
             </div>
         </div>
