--- a/gestion de consulta/Views/Shared/_LayoutLogin.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutLogin.cshtml
@@ -16,6 +16,8 @@
     </div>
     <script src="~/Scripts/jquery-3.3.1.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="~/Scripts/Login.js"></script>
     <script src="~/Scripts/paciente.js"></script>
+
 </body>
 </html>
