--- a/gestion de consulta/Views/Login/Login.cshtml
+++ b/gestion de consulta/Views/Login/Login.cshtml
@@ -10,8 +10,8 @@
         <div class="widget-shadow">
             <div class="login-body">
                 <form>
-                    <input type="email" class="user" name="email" placeholder="Ingresa tu correo" required="">
-                    <input type="password" name="password" class="lock" placeholder="Contraseña" required="">
+                    <input type="email" id="l_identificacion" class="user"  placeholder="Identificacion" >
+                    <input type="password" id="l_contraseña"  class="lock" placeholder="Contraseña" >
                     <div class="forgot-grid">
                         <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>Recordar Contraseña</label>
                         <div class="forgot">
@@ -19,7 +19,9 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                    <input type="submit" name="Sign In" value="Iniciar">
+                    <div class="text-center">
+                        <input type="button" id="blogin" class="btn btn-warning btn-lg" onclick="return Login()" value="Iniciar sesion">
+                    </div>
                     <div class="registration">
                         No estas registrado ? Crea una cuenta
                         <a class="">
