--- a/gestion de consulta/Views/Paciente/Inicio.cshtml
+++ b/gestion de consulta/Views/Paciente/Inicio.cshtml
@@ -30,7 +30,7 @@
             <!-- Button -->
             <div class="form-group">
                 <div class="col-md-4">
-                    <button type="button" id="b_agenda" onclick="return AgendarCita()" class="btn btn-info" >Agendar cita</button>
+                    <button type="button" onclick="return AgendarCita()" class="btn btn-info" >Agendar cita</button>
                 </div>
             </div>
 
