--- a/gestion de consulta/Views/Shared/_LayoutPaciente.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutPaciente.cshtml
@@ -8,6 +8,7 @@
     <link href="~/css/sb-admin.css" rel="stylesheet" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+    <link href="~/css/Style1.css" rel="stylesheet" />
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body id="page-top">
@@ -36,7 +37,7 @@
             <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-bell "></i>
-                    <span class="badge badge-danger">10+</span>
+                    <span class="badge badge-danger">@ViewBag.n_citas</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
                     <a class="dropdown-item" href="#">Action</a>
@@ -48,7 +49,7 @@
             <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-envelope"></i>
-                    <span class="badge badge-danger">12+</span>
+                    <span class="badge badge-danger">0</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
                     <a class="dropdown-item" href="#">Action</a>
@@ -62,7 +63,7 @@
                     <i class="fa fa-user-circle"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#" onclick="return actualizarUsuario(@Session["Ced_usuario"])">Editar perfil</a>
+                    <a class="dropdown-item" href="#" onclick="return ObtenerUsuario(@Session["Ced_usuario"])">Editar perfil</a>
                     <a class="dropdown-item" href="#">Activity Log</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Cerrar sesion</a>
@@ -83,7 +84,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
                     <h6 class="dropdown-header">Citas</h6>
-                    <a class="dropdown-item active" href="#" onclick="return agendar()">Consulta externa</a>
+                    <a class="dropdown-item active" href="#" onclick="return Inicio()">Consulta externa</a>
                     <a class="dropdown-item" href="#">Pediatria</a>
                     <a class="dropdown-item" href="#">Oftalmologia</a>
                     <div class="dropdown-divider"></div>
