--- a/gestion de consulta/Views/Paciente/Recuperar.cshtml
+++ b/gestion de consulta/Views/Paciente/Recuperar.cshtml
@@ -10,12 +10,12 @@
         <div class="sign-up-row widget-shadow">
             <form>
                 <div class="sign-u">
-                    <input type="email" placeholder="Correo Electronico" required="">
+                    <input type="email" id="correo"  placeholder="Correo Electronico" required="">
                     <div class="clearfix"> </div>
                 </div>
                 <div class="clearfix"> </div>
-                <div class="sub_home">
-                    <input type="submit" value="Enviar">
+                <div class="text-center">
+                    <input type="button" onclick="return Recuperar()" class="btn btn-warning btn-lg" value="Enviar">
                     <div class="clearfix"> </div>
                 </div>
             </form>
@@ -23,3 +23,37 @@
     </div>
 
 </div>
+
+<script>
+    function Recuperar() {
+        //var res = validateFormCita()
+        //if (res == false) {
+        //    return false;
+        //}
+        alert("hola")
+        var empObj = {
+            correo: $('#correo').val(),
+        };
+        $.ajax({
+            url: "/Login/Recuperar_",
+            data: JSON.stringify(empObj),
+            type: "POST",
+            contentType: "application/json;charset=utf-8",
+            dataType: "json",
+            success: function (result) {
+                swal({
+                    title: "Recuperacion de contraseña",
+                    text: result,
+                    icon: "success",
+                    button: "Aceptar",
+                }).then(function (isConfirm) {
+                    window.location.href = "/Login/Login";
+                })
+            },
+            error: function (errormessage) {
+                alert(errormessage.responseText);
+            }
+        });
+    }
+
+</script>
