--- a/gestion de consulta/Views/Medico/Inicio.cshtml
+++ b/gestion de consulta/Views/Medico/Inicio.cshtml
@@ -4,5 +4,8 @@
     Layout = "~/Views/Shared/_LayoutMedico.cshtml";
 }
 
-<h2>medico</h2>
+<div class="card mb-3 tbod">
+    <h1>medico</h1>
 
+
+</div>
