--- a/gestion de consulta/Views/Shared/_LayoutMedico.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutMedico.cshtml
@@ -38,25 +38,21 @@
             <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-bell "></i>
-                    <span class="badge badge-danger">10+</span>
+                    <span class="badge badge-danger">@ViewBag.n_citas_medico</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#" onclick="return CitasMedico(@Session["Ced_usuario"])">Citas</a>
                 </div>
             </li>
             <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-envelope"></i>
-                    <span class="badge badge-danger">12+</span>
+                    <span class="badge badge-danger">0</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="messagesDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Mensajes</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Mensajes especiales</a>
                 </div>
             </li>
             <li class="nav-item dropdown no-arrow">
@@ -64,8 +60,7 @@
                     <i class="fa fa-user-circle"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Editar perfil</a>
-                    <a class="dropdown-item" href="#">Activity Log</a>
+                    <a class="dropdown-item" href="#">Registro de actividad</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Cerrar sesion</a>
                 </div>
@@ -78,44 +73,25 @@
 
         <!-- Sidebar -->
         <ul class="sidebar navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#" onclick="return  loadData()">
-                    <i class="fa fa-tachometer"></i>
-                    <span>Dashboard</span>
-                </a>
-            </li>
+            
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fa fa-folder"></i>
-                    <span>Pages</span>
+                    <span>Consultas</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-                    <h6 class="dropdown-header">Login Screens:</h6>
-                    <a class="dropdown-item" href="login.html">Login</a>
-                    <a class="dropdown-item" href="register.html">Register</a>
-                    <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+                    <h6 class="dropdown-header">Consultas generales:</h6>
+                    <a class="dropdown-item active" href="#" onclick="return CitasMedico(@Session["Ced_usuario"])">Citas</a>
                     <div class="dropdown-divider"></div>
-                    <h6 class="dropdown-header">Other Pages:</h6>
-                    <a class="dropdown-item" href="404.html">404 Page</a>
-                    <a class="dropdown-item active" href="blank.html">Blank Page</a>
+                    <h6 class="dropdown-header">Consultas especiales:</h6>
+                    <a class="dropdown-item " href="#">Historial Clinico</a>
+                    <a class="dropdown-item " href="#">Enfermedad</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="#">
                     <i class="fa fa-chart-area"></i>
-                    <span>Charts</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fa fa-table"></i>
-                    <span>Tables</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fa fa-table"></i>
-                    <span>usuarios</span>
+                    <span>Documentos</span>
                 </a>
             </li>
         </ul>
@@ -173,12 +149,10 @@
         </div>
     </div>
 
-
-
-
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/jquery.easing.min.js"></script>
     <script src="~/Scripts/sb-admin.min.js"></script>
+    <script src="~/Scripts/medico.js"></script>
 </body>
 </html>
