--- a/gestion de consulta/Views/Medico/HistorialesClinicos.cshtml
+++ b/gestion de consulta/Views/Medico/HistorialesClinicos.cshtml
@@ -5,19 +5,17 @@
         <table class="table table-hover" id="dataTable" width="100%" cellspacing="0">
             <thead>
                 <tr>
+
                     <th>
                         @Html.DisplayNameFor(model => model.Identificacion)
-                       
+
                     </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fecha)
-                       
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Hora)
-                    </th>
+
                     <th>
                         @Html.DisplayNameFor(model => model.Nombres)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Apellidos)
                     </th>
                     <th>
                         Accion
@@ -28,19 +26,17 @@
                 @foreach (var item in Model)
                 {
                 <tr>
+
                     <td>
                         @Html.DisplayFor(modelItem => item.Identificacion)
-                       
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Fecha)
-                      
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Hora)
+
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Nombres)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Apellidos)
+
                     </td>
                     <td>
                         <a href="#" class="fa fa-vcard" style="color:blue"> Historial Clinico</a>
