--- a/gestion de consulta/Views/Shared/_LayoutMedico.cshtml
+++ b/gestion de consulta/Views/Shared/_LayoutMedico.cshtml
@@ -60,7 +60,8 @@
                     <i class="fa fa-user-circle"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="#">Registro de actividad</a>
+                    <a class="dropdown-item">@Session["Nom_usuario"]</a>
+                    <a class="dropdown-item">CC : @Session["Ced_usuario"]</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Cerrar sesion</a>
                 </div>
@@ -84,7 +85,7 @@
                     <a class="dropdown-item active" href="#" onclick="return CitasMedico(@Session["Ced_usuario"])">Citas</a>
                     <div class="dropdown-divider"></div>
                     <h6 class="dropdown-header">Consultas especiales:</h6>
-                    <a class="dropdown-item " href="#">Historial Clinico</a>
+                    <a class="dropdown-item " href="#" onclick="return Historiales()">Historial Clinico</a>
                     <a class="dropdown-item " href="#">Enfermedad</a>
                 </div>
             </li>
